Added styles for scrollbar.

--- a/web/styles/styles/additional_styles.css
+++ b/web/styles/styles/additional_styles.css
@@ -14,7 +14,10 @@ Table of content
 
 5 -> footer
 
+6 -> Scroller
+
  */
+
 
 /* fonts */
 .font-pacifico {
@@ -219,6 +222,58 @@ header .logo a {
 }
 
 /*!footer*/
+
+/* Scroll Bar */
+
+* {
+    scrollbar-color: #525965 white;
+    scrollbar-width: thin;
+}
+
+
+::-webkit-scrollbar {
+    width: 6px;
+    height: 7px;
+}
+
+::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #525965;
+    border: 0px none #ffffff;
+    border-radius: 0px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #525965;
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: #525965;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+    border: 0px none #ffffff;
+    border-radius: 50px;
+}
+
+::-webkit-scrollbar-track:hover {
+    background: transparent;
+}
+
+::-webkit-scrollbar-track:active {
+    background: transparent;
+}
+
+::-webkit-scrollbar-corner {
+    background: transparent;
+}
+
+/* !Scroll Bar */
 
 @media screen and (max-width: 1382px) {
     .subscribe_bg {
